"Added day_of_week, create query string parameters"
